fixed small bugs and removed scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,18 @@ body {
   background: #f3f4f6;
   /* background: var(--primaryMed); */
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 .text-select-off {
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
@@ -121,8 +133,6 @@ section p:first-of-type {
 section p.breakSectionTitle {
   padding-top: 0px;
 }
-
-
 
 .no-select {
   -webkit-touch-callout: none; /* iOS Safari */
@@ -428,7 +438,7 @@ sup:hover {
   right: 0;
   background: #202020;
 }
-.marker-end{
+.marker-end {
   /* padding-top: 10px; */
 }
 
